--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 { 
   "name" : "jshashes"
-, "description" : "A hash algorithm independent library purely JavaScript implemented for both server and client side"
-, "tags" : ["hash", "md5", "sha1", "sha256", "hashes", "sha512", "RIPEMD160","checksum", "base64", "crc", "encoding", "algorithm", "library"]
-, "version" : "0.1.4b"
+, "description" : "A fast and independent hashing library pure JavaScript implemented for both server and client side"
+, "tags" : ["hash", "md5", "sha1", "sha256", "hashes", "sha512", "RIPEMD160","checksum", "base64", "crc", "encoding", "algorithm" ]
+, "version" : "0.1.5b"
 , "author" : "Tomas Aparicio <tomas@rijndael-project.com>"
 , "repository" :
   { 
