--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 { 
   "name" : "jshashes"
 , "description" : "A fast and independent hashing library pure JavaScript implemented for both server and client side"
-, "tags" : ["hash", "md5", "sha1", "sha256", "hashes", "sha512", "RIPEMD160","checksum", "base64", "crc", "encoding", "algorithm" ]
-, "version" : "0.1.5b"
+, "tags" : ["hash", "md5", "sha1", "sha256", "hashes", "sha512", "RIPEMD","checksum", "base64", "crc", "encoding", "algorithm" ]
+, "version" : "1.0.1"
 , "author" : "Tomas Aparicio <tomas@rijndael-project.com>"
-, "repository" :
-  { 
+, "repository" : { 
     "type" : "git"
   , "url" : "http://github.com/h2non/jsHashes.git"
   }
@@ -13,7 +12,7 @@
 , "dependencies": {}
 , "bugs" : { "url" : "http://github.com/h2non/jsHashes/issues" }
 , "engines" : {"node" : "*"}
-, "main" : "./server/lib/hashes"
+, "main" : "hashes"
 , "licenses": [
     {
       "type": "New BSD",
