--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "test": "test"
   }
 , "scripts": {
-    "test": "mocha -R spec"
+    "test": "mocha"
   }
 , "demos": [
     "/examples/client/hexadecimal.html",
