--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "name" : "jshashes"
 , "description" : "A fast and independent hashing library pure JavaScript implemented (ES5 compliant) for both server and client side (MD5, SHA1, SHA256, SHA512, RIPEMD, HMAC and Base64)"
 , "keywords" : [ "hash", "md5", "sha1", "sha256", "hashes", "sha512", "RIPEMD", "base64", "hmac", "crc", "encoding", "algorithm" ]
-, "version" : "1.0.2"
-, "author" : "Tomas Aparicio <tomas@rijndael-project.com>"
+, "version" : "1.0.3"
 , "maintainers" : [
     {
         "name": "Tomas Aparicio",
-        "email": "tomas@rijndael-project.com",
+        "email": "tomas@aparicio.me",
         "web": "http://tomas.aparicio.me"
     }  
+  ]
+, "contributors": [ 
+    {
+      "name": "C. Scott Ananian",
+      "email": "cscott@cscott.net",
+      "web": "http://cscott.net"
+    } 
   ]
 , "repository" : { 
     "type" : "git",
