--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "mocha": "~1.9.0",
-    "uglify-js": "^2.4.13"
+    "uglify-js": "~2.4.13"
   },
   "keywords": [
     "hash",
