refactor(package): specify main entry file with relative path

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "engines": {
     "node": "*"
   },
-  "main": "hashes",
+  "main": "./hashes.js",
   "bin": {
     "hashes": "./bin/hashes"
   },
